--- a/about.html
+++ b/about.html
@@ -17,8 +17,30 @@
             <a href="index.html" class="logo">IRIS</a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="#programs">Programs</a>
-                <a href="#why-iris" class="active">About</a>
+                <div class="dropdown">
+                    <a href="#programs" class="dropbtn">Programs <i class="fas fa-chevron-down"></i></a>
+                    <div class="dropdown-content">
+                        <div class="dropdown-column">
+                            <h4>Certificates</h4>
+                            <a href="#web-dev">Web Dev Basics</a>
+                            <a href="#python-ai">Python & AI</a>
+                            <a href="#graphic-design">Graphic Design</a>
+                        </div>
+                        <div class="dropdown-column">
+                            <h4>Diplomas</h4>
+                            <a href="#fullstack">Full Stack Developer</a>
+                            <a href="#analytics">Business Analytics</a>
+                            <a href="#uxui">UX/UI Advanced</a>
+                        </div>
+                        <div class="dropdown-column">
+                            <h4>Degrees</h4>
+                            <a href="#btech">B.Tech in Computer Science</a>
+                            <a href="#bba">BBA in Tech Management</a>
+                            <a href="#madm">MA in Digital Media</a>
+                        </div>
+                    </div>
+                </div>
+                <a href="about.html" class="active">About</a>
                 <a href="#contact" class="cta-button">Get Started</a>
             </div>
             <div class="hamburger">
